# internal/http/handlers/requests_delete_all/handler.go
@@ -4,19 +4,31 @@ import (
 	"context"
 
 	"gh.tarampamp.am/webhook-tester/v2/internal/http/openapi"
+	"gh.tarampamp.am/webhook-tester/v2/internal/pubsub"
 	"gh.tarampamp.am/webhook-tester/v2/internal/storage"
 )
 
 type (
 	sID = openapi.SessionUUIDInPath
 
-	Handler struct{ db storage.Storage }
+	Handler struct {
+		appCtx context.Context
+		db     storage.Storage
+		pub    pubsub.Publisher[pubsub.RequestEvent]
+	}
 )
 
-func New(db storage.Storage) *Handler { return &Handler{db: db} }
+func New(appCtx context.Context, db storage.Storage, pub pubsub.Publisher[pubsub.RequestEvent]) *Handler {
+	return &Handler{appCtx: appCtx, db: db, pub: pub}
+}
 
 func (h *Handler) Handle(ctx context.Context, sID sID) (*openapi.SuccessfulOperationResponse, error) {
 	if err := h.db.DeleteAllRequests(ctx, sID.String()); err != nil {
+		return nil, err
+	}
+
+	// notify the subscribers
+	if err := h.pub.Publish(h.appCtx, sID.String(), pubsub.RequestEvent{Action: pubsub.RequestActionClear}); err != nil { //nolint:contextcheck,lll
 		return nil, err
 	}
 
